# cpp-waste-recycling-Bela-Szilagyi

./: .gitignore  BottleCap.h  CMakeLists.txt  Commands.hpp  ConsoleInterface.cpp  ConsoleInterface.h  Dustbin.cpp  Dustbin.h  Dustbin9000.cpp  Dustbin9000.h  DustbinContentError.hpp  Exceptions.hpp  Garbage.cpp  Garbage.h  MetalGarbage.h  PaperGarbage.cpp  PaperGarbage.h  PlasticGarbage.cpp  PlasticGarbage.h  main.cpp
tests/: test.cpp
